Spacing and coloring fixes

--- a/src/herbie/ExpressionTable.css
+++ b/src/herbie/ExpressionTable.css
@@ -309,3 +309,7 @@
 .add-expression button:disabled {
   background-color: #ccc;
 }
+
+.toggle-check-all {
+    accent-color: var(--action-color);
+}
